--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    csv_directory: '%kernel.project_dir%/public/uploads/csv'
+    jrxml_directory: '%kernel.project_dir%/public/jrxml'
+    report_directory: '%kernel.project_dir%/public/uploads/reports'
+    upload_directory: '%kernel.project_dir%/public/uploads'
 
 services:
     # default configuration for services in *this* file
