--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -2,3 +2,5 @@ lexik_jwt_authentication:
   secret_key: '%kernel.project_dir%/config/jwt/private.pem'
   public_key: '%kernel.project_dir%/config/jwt/public.pem'
   pass_phrase: '%env(JWT_PASSPHRASE)%'
+  user_identity_field: id
+  user_id_claim: id
