--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,12 @@ security:
         App\Entity\Admin:
             algorithm: bcrypt
             cost: 12
+        App\Entity\Technicien:
+            algorithm: bcrypt
+            cost: 12
+        App\Entity\Clients:
+            algorithm: bcrypt
+            cost: 12
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
