--- a/.env
+++ b/.env
@@ -48,3 +48,5 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
 WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+
+CLOUDINARY_URL=cloudinary://<118553587329966>:<dit4hdghr>@<E-Commerce>
