--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0",
+        "cloudinary/cloudinary_php": "^2.14",
+        "doctrine/annotations": "^1.14",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
